README and linux results